--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <nav>
-      <span>Plan your Visit</span>
-      <span>Learn about the Park</span>
-      <span>Get Involved</span>
+      <p class="tab plan">Plan your Visit</p>
+      <p class="tab learn">Learn about the Park</p>
+      <p class= "tab get">Get Involved</p>
     </nav>
     <header>
       <div class="header-image">
         <img src="assets/header_img.jpg" alt="Tunnel view at Yosemite Park" />
       </div>
       <div class="header-title">
-        <h1>Yosemite Park Guide</h1>
+        <h1 id="yosemite-title">Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>
           Always open. Reservations are not available or required to enter the
@@ -73,9 +74,9 @@
         />
       </div>
       <div class="bottom-links">
-        <span>Plan your Visit</span>
-        <span>Learn about the Park</span>
-        <span>Get Involved</span>
+        <p class="plan">Plan your Visit</p>
+        <p class="learn">Learn about the Park</p>
+        <p class="get">Get Involved</p>
       </div>
     </footer>
   </body>
