update CSS tabs at the top

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         />
       </div>
       <div class="bottom-links">
-        <p class="plan">Plan your Visit</p>
-        <p class="learn">Learn about the Park</p>
-        <p class="get">Get Involved</p>
+        <p class=" tab plan">Plan your Visit</p>
+        <p class=" tab learn">Learn about the Park</p>
+        <p class="tab get">Get Involved</p>
       </div>
     </footer>
   </body>
