--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -10,10 +11,9 @@
       <p class="tab learn">Learn about the Park</p>
       <p class= "tab get">Get Involved</p>
     </nav>
+
     <header>
-      <div class="header-image">
-        <img src="assets/header_img.jpg" alt="Tunnel view at Yosemite Park" />
-      </div>
+        <img id="circle" src="assets/header_img.jpg" alt="Tunnel view at Yosemite Park" />
       <div class="header-title">
         <h1 id="yosemite-title">Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <section class="info-block">
+    <section class="main-text">
       <p>
         Not just a great valley, but a shrine to human foresight, the strength
         of granite, the power of glaciers, the persistence of life, and the
@@ -74,8 +74,8 @@
         />
       </div>
       <div class="bottom-links">
-        <p class=" tab plan">Plan your Visit</p>
-        <p class=" tab learn">Learn about the Park</p>
+        <p class="tab plan">Plan your Visit</p>
+        <p class="tab learn">Learn about the Park</p>
         <p class="tab get">Get Involved</p>
       </div>
     </footer>
