--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <img
           src="https://image.flaticon.com/icons/svg/2979/2979348.svg"
           alt="cartoon of a camp fire"
+          id="campfire"
         />
         <p>
           Fire is a natural and essential part of Yosemite. We manage fire
@@ -54,6 +55,7 @@
 
       <div class="info-block-trailer">
         <img
+          id= "trailer"
           src="https://image.flaticon.com/icons/svg/820/820374.svg"
           alt="cartoon of a trailer"
         />
