Set up close to the final product. Need revision.

--- a/index.html
+++ b/index.html
@@ -69,12 +69,7 @@
     </section>
 
     <footer>
-      <div class="bottom-picture">
-        <img
-          src="assets/footer_img.jpg"
-          alt="landscape view of Yosemite from iconic Glacier Point"
-        />
-      </div>
+      <img class="bottom-picture" src="assets/footer_img.jpg"alt="landscape view of Yosemite from iconic Glacier Point"/>
       <div class="bottom-links">
         <p class="tab plan">Plan your Visit</p>
         <p class="tab learn">Learn about the Park</p>
